menu/static/menu/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
 background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/menu_background.jpg" )no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
    font-family: Arial, sans-serif;
    font-size: 16px;
    line-height: 1.2;
    color: #ffffff;
}


/* Make logo responsive */
.logo {
    max-width: 100%;   /* Prevent overflow */
    height: auto;      /* Maintain aspect ratio */
    margin: 20px auto; /* Center the logo */
    padding: 10px;       /* Optional padding */

    margin-top: 25px;
    margin-left: 35px;
}

h1 {
    text-align: center;
    background-color: #ff6347; /* Tomato color for the heading */
    margin-bottom: 20px;
    display: inline;
    padding: 8px 22px;
}

.menu_title{
    text-align: center;
    color: #fefefe; /* Tomato color for the heading */
    margin-bottom: 20px;
    display: inline;
}
.menu_list {
    margin-left: 30px;
}

.menu_liste_item {
margin: 30px 0;
}
.menu_liste_item {
    font-size: 1.5em;
    color: #ffffff; /* Tomato color for the item title */
}

.menu_liste_price {
    font-size: 1.2em;
    color: #ff6347; /* Tomato color for the price */
    font-weight: bold;
    margin-left: 8px;
}

.menu_liste_ingredients {
    font-size: 14px;
    color: #c8c8c8;
    display: block;
    position: relative;
    width: 320px;
}
.menu_liste_vegetarienne {
    font-size: 12px;
    color: #000000;
    text-align: center;
    background-color: #ff6347; 
    padding: 3px 8px;
    display: inline-block;
    border-radius: 8px;/* Tomato color for the heading */ /* LimeGreen color for vegetarian label */
}





/* Optional: Adjust size for different devices */
@media (max-width: 768px) {
    .logo {
        width: 150px;
    }
}

@media (max-width: 480px) {
    .logo {
        width: 100px;
    }
}

